two questions that verge on np hardness

--- a/interview-questions.tex
+++ b/interview-questions.tex
@@ -162,5 +162,24 @@
         $(A,B)$.  we may not place city hall in the park or on its boundary.
         what then?
     }
-
+    \quest{task scheduling}{%
+        we employ three oxen on our farm: jesse, pat, and sandy.  each task $t$
+        in a list $T$ of $1000$ tasks requires the simultaneous effort of $n_t$
+        many oxen over a contiguous period of $d_t$ many days.  a schedule
+        assigns each ox-day to some task.  determine a schedule that completes
+        all tasks in $T$ by year's end, if possible.% 
+    }{%
+        remark on the computational hardness of this task as we modify its
+        parameters.% 
+    }
+    \quest{$k$-SAT}{%
+        fix a finite set of logical atoms.  is
+        a given list of assertions,
+        each of the form ${\sf p}$ and ${\sf p}\to {\sf q}$, logically consistent?  here,
+        ${\sf p},{\sf
+        q},{\sf r}$ stand for atoms or their negations.%
+    }{%
+        what if we also permit a small number of assertions of the form
+        $({\sf p}\wedge {\sf q})\to {\sf r}$?% 
+    }
 \end{document}
