--- a/interview-questions.tex
+++ b/interview-questions.tex
@@ -230,4 +230,138 @@
         correct.%   
     }
 
+    \newpage
+    \textbf{\Large Sample Solutions}
+
+    \par\noindent\hspace{-1cm}
+    \textbf{0. legal parentheses.}
+\begin{verbatim}
+    def well_formed(s):
+        depth = 0
+        for c in s:
+            if c=='('    depth += +1
+            elif c==')': depth += -1
+            else:        assert False, "didn't expect `{}`".format(c)
+            if depth < 0: return False 
+        return depth==0
+\end{verbatim}
+
+    \par\noindent\hspace{-1cm}
+    \textbf{5. merge sort.}
+
+\begin{verbatim}
+    def zip_ordered_lists(l_a, l_b):
+        l = []
+        i = 0; j = 0
+        while i != len(l_a):
+            while j != len(l_b) and l_b[j] < l_a[i]:
+                l.append(l_b[j]); j += 1
+            l.append(x)
+        return l
+
+    def merge_sort(l):
+        if len(l) <= 1: return l
+        half = int(len(l)/2)
+        return zip_ordered_lists(
+                   merge_sort(l[:half]),
+                   merge_sort(l[half:])
+               )
+\end{verbatim}
+
+    \par\noindent\hspace{-1cm}
+    \textbf{10. herding cows.}
+
+\begin{verbatim}
+    # suppose H and S are given lists
+
+    def can_unify(f, h_a, h_b):
+        for song in S:
+            if f(song, h_a) == f(song, h_b): return True
+        return False
+
+    def can_herd(f): 
+        for h_a in H:
+            for h_b in H:
+                if not can_unify(f, h_a, h_b): return False
+        return True
+\end{verbatim}
+
+\newpage
+    \par\noindent\hspace{-1cm}
+    \textbf{15. logical consistency.}
+
+\begin{verbatim}
+    # we represent each atom as a string and we each judgement (of an atom
+    # as true or false) by a pair (string, bool).
+    # we're given P0, the set of simple assertions p, and P1, the set of
+    # asserted implications p --> q.  here, p, q stand for judgements.
+
+    def all_judgements(P0, P1): 
+        judgements = set([(p,b) for (p,b) in P0]) # copy
+        unstable = True
+        while unstable:
+            unstable = False
+            for (x, v) in judgements:
+                for ((p, a), (q, b)) in P1:
+                    if (x, v) != (p, a) or (q, b) in judgements: continue
+                    judgements.add((q, b))
+                    unstable = True
+        return judgements
+
+    def is_consistent(P0, P1):
+        js = all_judgements(P0, P1)
+        for (x, v) in js:
+            if (x, not v) in js: return False
+        return True
+\end{verbatim}
+
+\newpage
+    \par\noindent\hspace{-1cm}
+    \textbf{20. lru cache.}
+
+\begin{verbatim}
+    class DLLNode:
+        def __init__(self, pred, succ, cargo):  
+            self.pred = pred
+            self.succ = succ
+            if self.pred is not None: self.pred.succ = self
+            if self.succ is not None: self.succ.pred = self
+            self.cargo = cargo
+        def remove(self): 
+            if self.pred is not None: self.pred.succ = self.succ
+            if self.succ is not None: self.succ.pred = self.pred
+
+    class LruCache:
+        def __init__(self, k):
+            self.k = k
+            self.data = {} # key --> (value, DLL node containing key)
+            self.head = DLLNode(None, None, None) 
+            self.tail = DLLNode(head, None, None) 
+
+        def query(self, key): 
+            self.touch(key)
+            present = key in self.data
+            return (present, self.data[key][0] if present else None) 
+
+        def update(self, key, value): 
+            if key not in self.data:
+                self.data[key] = (value, DLLNode(self.head, self.head.succ, key)) 
+                self.trim()
+            else:
+                self.touch(key)
+                self.data[key] = (value, self.data[key][1])
+
+        def touch(self, key):
+            (_, node) = self.data[key] 
+            node.remove()
+            DLLNode(self.head, self.head.succ, key)
+
+        def trim(self):
+            while len(self.data) > self.k:
+                last = self.tail.pred
+                last.remove()
+                del self.data[last.cargo] 
+
+\end{verbatim}
+
 \end{document}
